<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_view_goods_list"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image_view_goods"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/display_goods_image" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginVertical="8dp">
            <TextView
                android:id="@+id/text_view_name_goods"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/nameGoods"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:id="@+id/text_view_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/price"/>
            <TextView
                android:id="@+id/text_view_name_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/name_shop"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
