<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BasicInfoActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_image_view_photo"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_avatar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_get_image_from_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:layout_margin="16dp"
            android:text="@string/get_from_camera"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_choose_image_from_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:layout_margin="16dp"
            android:text="@string/choose_from_album"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp">
        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_real_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/true_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/phone_number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/address"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_margin="16dp"
        android:text="@string/change"/>
</LinearLayout>