<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".nav.HomePage">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/edit_text_search"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/string_search"
                android:inputType="text"
                android:textSize="12sp"
                android:background="@drawable/shape_ui_edit"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_search"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/search"
                app:cornerRadius="24dp"
                android:theme="@style/Theme.MaterialComponents.Light"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/ic_launcher_foreground" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="16dp"
                    android:textSize="48sp"
                    android:text="@string/string_cn_its_my_time"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="16dp"
                    android:textSize="24sp"
                    android:text="@string/it_s_my_time"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/button_all_goods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/display_all_goods"
            android:background="@android:color/transparent"
            app:drawableStartCompat="@drawable/ic_baseline_storefront_24"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>