<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addgoods.AddGoods">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_with_back"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        android:layout_height="?android:actionBarSize"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_view_goods_add"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            android:tag="no_select"
            android:contentDescription="@string/display_goods_image"
            android:src="@drawable/default_avatar"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_get_image_from_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/Theme.MaterialComponents.Light"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/get_from_camera"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_get_image_from_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:theme="@style/Theme.MaterialComponents.Light"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/get_from_album"/>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_goods_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_goods_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goods_name"
            android:layout_margin="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_price"
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:hint="@string/goods_price"
        android:inputType="numberDecimal"
        android:layout_margin="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detail"
            android:maxLines="8"
            android:layout_margin="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--    TODO: 增加一个商品数量-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_put_away"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/putaway"
        android:theme="@style/Theme.MaterialComponents.Light"/>
</LinearLayout>