<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/image_view_goods"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/image_goods"
            android:scaleType="centerCrop"
            android:src="@drawable/default_avatar" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/text_view_name_goods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:text="@string/name_goods"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/text_view_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                app:drawableStartCompat="@drawable/ic_cny"
                android:text="@string/name_shop"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/text_view_name_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                app:drawableStartCompat="@drawable/ic_baseline_storefront_24"
                android:text="@string/name_shop"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/text_view_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:text="@string/detail"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>